[tool.poetry]
name = "pricestf_wrapper"
version = "1.0.0"
description = ""
authors = ["Reue Munz <tt574@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
